@@ -2,5 +2,5 @@
 
 INCLUDES=@INCLUDES@ -I@top_srcdir@ -I@top_srcdir@/libzend
 noinst_LIBRARIES=libphpext_session.a
-libphpext_session_a_SOURCES=session.c mod_files.c mod_mm.c
+libphpext_session_a_SOURCES=session.c mod_files.c mod_mm.c mod_user.c
 
